@@ -369,6 +369,14 @@ html/captive-portal/templates/register_2.html
 html/captive-portal/templates/register_<nbregpages>.html
 EOT
 
+[registration.guests_self_registration]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Is the guest self-registration feature enabled or not. Self-registration 
+is the signup button where a guest can register by email or SMS.
+EOT
+
 [guests_self_registration.modes]
 type=multi
 options=sms|email
